CatchMeV2 ADS add

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,9 @@
         android:layout_width="57dp"
         android:layout_height="57dp"
         android:layout_marginEnd="12dp"
+        android:contentDescription="TODO"
         android:onClick="soundson"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -21,15 +23,14 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.973"
         app:srcCompat="@drawable/soundsicon"
-        tools:ignore="SpeakableTextPresentCheck"
-        android:contentDescription="TODO" />
+        tools:ignore="SpeakableTextPresentCheck" />
 
     <ImageView
         android:id="@+id/soundsicon1"
         android:layout_width="57dp"
         android:layout_height="57dp"
         android:onClick="soundsoff"
-        android:visibility="invisible"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.957"
@@ -43,6 +44,7 @@
         android:layout_width="57dp"
         android:layout_height="57dp"
         android:onClick="vibrationon"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/soundsicon0"
         app:layout_constraintHorizontal_bias="0.924"
@@ -57,7 +59,7 @@
         android:layout_width="57dp"
         android:layout_height="57dp"
         android:onClick="vibrationoff"
-        android:visibility="invisible"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/soundsicon0"
         app:layout_constraintHorizontal_bias="0.929"
